--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -29,6 +29,8 @@ html
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/compositions") Композиции
                 li
+                  a(class="dropdown-item" href="/v1/api/adminCatalog/myComposition") Мои композиции
+                li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/roles") Роли пользователей 
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/rights") Доступные системные права  
@@ -48,6 +50,10 @@ html
           block pageUsersInfo 
           block pageJanrs
           block pageJanrInfo
+          block admin_myProfile
+          block admin_myPlaylists
+          block admin_myPlaylistDetail
+          block admin_listPlaylists
         div(class="col-2 col-sm-1")
           p Данные 2
     //- script(src="/scripts/script.js") 
