--- a/views/main.pug
+++ b/views/main.pug
@@ -18,6 +18,8 @@ html
             li(class="nav-item")
               a(class="nav-link" aria-current="page" href="/v1/api/main/myPlaylists") Мои плэйлисты  
             li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/main/myMusic") Мои композиции 
+            li(class="nav-item")
               a(class="nav-link" aria-current="page" href="/v1/api/main/users") Другие пользователи
             li(class="nav-item")
               a(class="nav-link" aria-current="page" href="/v1/api/main/janrs") Жанры 
