--- a/views/listMusic.pug
+++ b/views/listMusic.pug
@@ -1,40 +1,87 @@
 extends main 
 
 block listMusic 
-    div(class="button-section") 
-        button(class="btnCreateMusic" type="submit") Добавить
+
+    h1 Список композиций 
+    div(class="row hstack gap-3")
+        div(class="cal button-section") 
+            button(class="btn btn-primary btnCreateMusic" type="submit") <h5>Добавить</h5>
+    br
     div(class='btn1-addtrack hidden')
-        form(method='POST' action="/v1/api/main/music/create" enctype="multipart/form-data" id="form_POST_data_track")
-            div.form-group 
-                label(for="name") Название компазиции:
-                input#name.form-control(type="text", placeholder="Название вашего трека" name='name' require='true' value=(undefined===newComposition ? '' : newComposition.name))
-            div.form-group
-                label Жанры:
-                    div 
-                        each janrs in dataJanr
-                            div(style='display: inline; padding-right:10px;')
-                                input.checkbox-input(type='checkbox', name='janrs', id=janrs._id, value=janrs._id, checked=janrs.checked)
-                                label(for=janrs._id) #{janrs.name}
-            div.form-group
-                .mb-3 
-                    label(for="description" class="form-label") О треке:
-                    textarea#description.form-control(rows="3" placeholder="Описание трека" name='description' require='true' value=(undefined===newComposition ? '' : newComposition.description))
-            label(for="Composition") Здесь укажите какой трек нужно загрузить
-                input(type="file" name="Composition" accept="audio/*" id="Composition")
-            input(type="submit" class="btn_send_form_create_track")
-    if errors 
-        ul 
-            for error in errors 
-                li!=error.msg
-    .text-allign Композиции
-        each composition in dataMusic
-            .inline #{composition}
-    .text-align Жанры
-        each janr in dataJanr
-            .inline #{janr}
-    .text-align Пользователи
-        each user in dataUser
-            .inline #{user}
-    .text-align Плэйлисты пользователя
-        each playlist in dataPlaylist
-            .inline #{playlist}
+        form(class="row vstack gap-3" method='POST' action="/v1/api/main/music/create" enctype="multipart/form-data" id="form_POST_data_track")
+            div(class="row")
+                div(class="col")
+                    label(for="name" class="form-label") <h5>Название компазиции</h5>
+                    input(class="form-control" type="text" placeholder="Название вашего трека" name='name' id="name")
+            div(class="row")
+                div(class="col hstack gap-3")
+                    each janrs in dataJanr
+                        div(class="form-check")
+                            input(class="form-check-input" type='checkbox' name='janrs' id=janrs._id value=janrs._id checked=janrs.checked)
+                            label(class="form-check-label" for=janrs._id) <h7>#{janrs.name}</h7>
+            div(class="row")
+                div(class="col")
+                    label(class="form-label" for="description") <h5>О треке</h5>
+                    textarea(class="form-control" rows="4" placeholder="Описание трека" name="description" id="description")
+            div(class="row")
+                div(class="col")
+                    label(for="Composition") <h6>Здесь укажите какой трек нужно загрузить - </h6>
+                    input(type="file" name="Composition" accept="audio/*" id="Composition")
+            div(class="row")
+                div(class="col")
+                    button(class="btn btn-info" type="submit" class="btn_send_form_create_track") Создать
+    div(class='normal-theme')
+                div(class="playlist")
+                    if(dataMusic.length!=0)
+                        each val in dataMusic
+                            div(class="song_item align-items-center" data_song_id=val._id)
+                                div(class="botton_song" data_song_id=val._id)
+                                    div(class="button_play" data_song_id=val._id src="/img/play.png" href=val.rout val=val.name)
+                                div(class="song_content" data_song_id=val._id)
+                                    a(class="song_name" href=val.getMusic) #{val.name}
+                                div(class="playlistData" data_song_id=val._id)
+                                    button(type="button" class="btn btn-primary buttonTrackData" data_song_id=val._id data-toggle="modal" data-target="#exampleModal3") + 
+                                    div(class="modal" id="exampleModal3" modal_song_id=`modal_song_id-${val._id}`)
+                                        div(class="modal-dialog" role="document")
+                                            div(class="modal-content" data_song_id=val._id)
+                                                div(class="modal-header")
+                                                    h5(class="modal-title" id="exampleModal3Label") Список плэйлистов
+                                                    button(type="button" class="close" data_song_id=val._id)
+                                                        span(aria-hidden="true") &times;
+                                                div(class="modal-body")
+                                                    if(dataPlaylist.length!=0)
+                                                        div(class="row")
+                                                            div(class="col hstack gap-3")
+                                                                each playlist in dataPlaylist
+                                                                    div(class="form-check" id_playlist=playlist._id)
+                                                                        input(class=`form-check-input IdSong-${val._id}` type='checkbox' name=playlist.NamePlaylistUser id_checkbox_playlist=playlist._id checked=playlist.compositions.checked)
+                                                                        label(class="form-check-label" for=playlist._id) <h7>#{playlist.name}</h7>
+                                                    else 
+                                                        p Нет плэйлистов
+                                                div(class="modal-footer")
+                                                    button(type="button" class=`btn btn-primary BTNForSendDataToSever_${val._id}` modal_song_id=`modal_song_id-${val._id}`) Обновить данные 
+                        else 
+                            p Треки не найдены!
+    div(class="row fixed-bottom")
+        div(class="col-lg-2")
+            br
+        div(class="col-lg-8 footer_palyer_wrapper justify-content-center text-center shadow")
+            div(class="player hideClass")
+                div(class="name_song") 
+                | 
+                <audio class="audio_player" src=''></audio>
+                div(class="progress_container_player")
+                    div(class="progress_player")
+                div(class="buttons_player")
+                    div(class="btn prev_player")
+                        img(class="prev_player_img" src="/img/prev.png", alt="previos")
+                    div(class="btn")
+                        img(class="play_player" src="/img/play.png", alt="play")
+                    div(class="btn next_player")
+                        img(class="next_player_img" src="/img/next.png", alt="next")
+                    div(class="btn volume_player")
+                        img(class="volume_player_img" src="/img/volume.png", alt="volume")
+                    div(class="btn change_size__volume hideClass")
+                        div(class="size_volume")
+        div(class="col-lg-2")
+    script(src="/javascripts/main_listMusic.js")
