--- a/public/stylesheets/styleMainPage.css
+++ b/public/stylesheets/styleMainPage.css
@@ -205,3 +205,30 @@ p{
 .showerClass {
   display:inherit;
 }
+
+.btn_delete_icon {
+  position: absolute;
+  z-index: 1;
+  display: block;
+  width: 24px!important;
+  height: 24px!important;
+}
+
+/* .button_play_image{
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  border-radius: 5px;
+} */
+
+.btn_delete_icon {
+  background-image: url(/img/delete_icon.png);
+}
+
+.song_btn_delete {
+  display: flex;
+  position: relative;
+  min-width: 24px;
+  flex-basis: 24px;
+  height: 24px;
+}
