delete music from playlist, get rout myMus

--- a/views/main.pug
+++ b/views/main.pug
@@ -39,6 +39,7 @@ html
           block main_myPlaylists
           block main_myProfile
           block main_myPlaylistDetail
+          block main_myMusic
           block main_listJanrs
           block main_InfoJanr
           block main_pageUsers
