--- a/views/main_myPlaylistDetail.pug
+++ b/views/main_myPlaylistDetail.pug
@@ -27,7 +27,7 @@ block main_myPlaylistDetail
         div(class='normal-theme')
                 div(class="playlist")
                     if(dataResult.compositions.length!=0)
-                    - var i = dataResult.compositions.length - 1
+                    - var i = 0
                         each val in dataResult.compositions
                             div(class="song_item align-items-center" data_song_id=val._id)
                                 div(class="botton_song" data_song_id=val._id)
@@ -36,7 +36,7 @@ block main_myPlaylistDetail
                                     a(class="song_name" href=val.getMusic) #{val.name}
                                 div(class="song_btn_delete" data_song_id=val._id)
                                     img(class="btn_delete_icon" data_song_id=val._id src="/img/delete_icon.png" arraydata=i alt="Delete song from playlist")
-                            - i = i - 1
+                            - i +=1
         br
     div(class="row fixed-bottom")
         div(class="col-lg-2")
