--- a/views/main_myMusic.pug
+++ b/views/main_myMusic.pug
@@ -40,6 +40,8 @@ block main_myMusic
                                     div(class="button_play" data_song_id=val._id src="/img/play.png" href=val.rout val=val.name)
                                 div(class="song_content" data_song_id=val._id)
                                     a(class="song_name" href=val.getMusic) #{val.name} 
+                                div(class="song_btn_delete" data_song_id=val._id)
+                                    img(class="btn_delete_icon" data_song_id=val._id src="/img/delete_icon.png" alt="Delete song from the system")
                         else 
                             p Треки не найдены!
     div(class="row fixed-bottom")
