--- a/views/admin_myPlaylistDetail.pug
+++ b/views/admin_myPlaylistDetail.pug
@@ -23,4 +23,41 @@ block admin_myPlaylistDetail
                 button(type="submit" class="btn btn-danger disbleDelete") Отменить 
             div(class="col")
                 button(type="submit" class="btn btn-success approveDelete") Подтвердить
-    script(src="/javascripts/adminMyPlayListDetail.js") 
+        br
+        div(class='normal-theme')
+                div(class="playlist")
+                    if(dataResult.compositions.length!=0)
+                    - var i = 0
+                        each val in dataResult.compositions
+                            div(class="song_item align-items-center" data_song_id=val._id)
+                                div(class="botton_song" data_song_id=val._id)
+                                    div(class="button_play" data_song_id=val._id src="/img/play.png" href=val.rout val=val.name)
+                                div(class="song_content" data_song_id=val._id)
+                                    a(class="song_name" href=val.getMusicByAdmin) #{val.name}
+                                div(class="song_btn_delete" data_song_id=val._id)
+                                    img(class="btn_delete_icon" data_song_id=val._id src="/img/delete_icon.png" arraydata=i alt="Delete song from playlist")
+                            - i +=1
+        br
+    div(class="row fixed-bottom")
+        div(class="col-lg-2")
+            br
+        div(class="col-lg-8 footer_palyer_wrapper justify-content-center text-center shadow")
+            div(class="player hideClass")
+                div(class="name_song") 
+                | 
+                <audio class="audio_player" src=''></audio>
+                div(class="progress_container_player")
+                    div(class="progress_player")
+                div(class="buttons_player")
+                    div(class="btn prev_player")
+                        img(class="prev_player_img" src="/img/prev.png", alt="previos")
+                    div(class="btn")
+                        img(class="play_player" src="/img/play.png", alt="play")
+                    div(class="btn next_player")
+                        img(class="next_player_img" src="/img/next.png", alt="next")
+                    div(class="btn volume_player")
+                        img(class="volume_player_img" src="/img/volume.png", alt="volume")
+                    div(class="btn change_size__volume hideClass")
+                        div(class="size_volume")
+        div(class="col-lg-2")
+    script(src="/javascripts/adminPage_MyPlayListDetail.js") 
