--- a/views/main_infoUsersPlaylistById.pug
+++ b/views/main_infoUsersPlaylistById.pug
@@ -5,5 +5,57 @@ block main_infoUsersPlaylistById
     h1=title
 
     div(class="content")
-        div(class="col")
-            h6 #{dataPlaylist}
+        div(class="row")
+            div(class="col")
+                button(class="btn btn-warning btn_aditPlaylist" type="submit") Изменить название
+            div(class="col")
+                button(class="btn btn-danger btn_deletePlaylist" type="submit") Удалить
+        br
+        div(class="row g-3 block_editedPlaylist hidden")
+            div(class="col")
+                p Новое название
+                input(type="text" class="form-control name_playlist" placeholder="Название плэйлиста" aria-label="Имя" name="name" value=(undefined===dataPlaylist ? '' : dataPlaylist.name))
+            div(class="col")
+                button(type="submit" class="btn btn-success btn_editPlaylist") Изменить 
+        div(class="row blockDeletePlaylist hidden")
+            h6 Подтвердите удаление плэйлиста - #{dataPlaylist.name}
+            div(class="col")
+                button(type="submit" class="btn btn-danger disbleDelete") Отменить 
+            div(class="col")
+                button(type="submit" class="btn btn-success approveDelete") Подтвердить
+        br
+        div(class='normal-theme')
+                div(class="playlist")
+                    if(dataPlaylist.compositions.length!=0)
+                    - var i = 0
+                        each val in dataPlaylist.compositions
+                            div(class="song_item align-items-center" data_song_id=val._id)
+                                div(class="botton_song" data_song_id=val._id)
+                                    div(class="button_play" data_song_id=val._id src="/img/play.png" href=val.rout val=val.name)
+                                div(class="song_content" data_song_id=val._id)
+                                    a(class="song_name" href=val.getMusicByAdmin) #{val.name}
+                            - i +=1
+        br
+    div(class="row fixed-bottom")
+        div(class="col-lg-2")
+            br
+        div(class="col-lg-8 footer_palyer_wrapper justify-content-center text-center shadow")
+            div(class="player hideClass")
+                div(class="name_song") 
+                | 
+                <audio class="audio_player" src=''></audio>
+                div(class="progress_container_player")
+                    div(class="progress_player")
+                div(class="buttons_player")
+                    div(class="btn prev_player")
+                        img(class="prev_player_img" src="/img/prev.png", alt="previos")
+                    div(class="btn")
+                        img(class="play_player" src="/img/play.png", alt="play")
+                    div(class="btn next_player")
+                        img(class="next_player_img" src="/img/next.png", alt="next")
+                    div(class="btn volume_player")
+                        img(class="volume_player_img" src="/img/volume.png", alt="volume")
+                    div(class="btn change_size__volume hideClass")
+                        div(class="size_volume")
+        div(class="col-lg-2")
+    script(src="/javascripts/main_infoUsersPlaylistById.js")
