--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -16,6 +16,8 @@ html
             li(class="nav-item")
               a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myProfile") Мой профиль 
             li(class="nav-item")
+              a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myCompositions") Мои композиции
+            li(class="nav-item")
               a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myPlaylists") Мои плэйлисты  
             li(class="nav-item dropdown")
               a(class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Каталог 
@@ -28,8 +30,6 @@ html
                   a(class="dropdown-item" href="/v1/api/adminCatalog/playlists") Плейлисты пользователей
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/compositions") Композиции
-                li
-                  a(class="dropdown-item" href="/v1/api/adminCatalog/myCompositions") Мои композиции
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/roles") Роли пользователей 
                 li
