--- a/views/main_InfoJanr.pug
+++ b/views/main_InfoJanr.pug
@@ -14,4 +14,5 @@ block main_InfoJanr
                         p(class="card-text") #{dataJanrItem.descriptions}
                 div(class="row")
                     div(class="col")
-                        button(class="btn btn-secondary btn_for_back" type="submit" onClick=`location.href="http://localhost:3000/v1/api/main/janrs"`) Назад
+                        button(class="btn btn-secondary btn_for_back" type="submit") Назад
+    script(src="/javascripts/main_InfoJanr.js") 
