--- a/views/pageJanrInfo.pug
+++ b/views/pageJanrInfo.pug
@@ -14,7 +14,7 @@ block pageJanrInfo
                         p(class="card-text") #{dataJanrItem.descriptions}
                 div(class="row")
                     div(class="col-sm-2")
-                        button(class="btn btn-secondary btn_for_back" type="submit" onClick=`location.href="http://localhost:3000/v1/api/adminCatalog/janrs"`) Назад
+                        button(class="btn btn-secondary btn_for_back" type="submit") Назад
                     div(class="col-sm-3")
                     div(class="col-sm-2")
                         button(class="btn btn-warning btn_for_edit") Изменить
