--- a/views/pageRolesInfo.pug
+++ b/views/pageRolesInfo.pug
@@ -31,5 +31,6 @@ block pageRolesInfo
                         div(class="deleteRole")
                             button(type="submit" class="btn btn-warning btnForDelete" id=dataRoles.dataRolesById._id) Удалить роль из системы
                         div(class="back")
-                            button(type="submit" class="btn btn-secondary" onClick=`location.href="http://localhost:3000/v1/api/adminCatalog/roles"`) Назад
+                            button(type="submit" class="btn btn-secondary btn_back_to_roles") Назад
+    script(src="/javascripts/pageRoles.js") 
                         
