--- a/views/admin_myPlaylists.pug
+++ b/views/admin_myPlaylists.pug
@@ -12,7 +12,7 @@ block admin_myPlaylists
             div(class="card col")
                 div(Class="card-footer")
                     each valPlaylist in dataResult 
-                        button(type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title=valPlaylist.name onClick=`location.href="http://localhost:3000${valPlaylist.admin_getPlaylist}"`) #{valPlaylist.name}
+                        button(type="button" class="btn btn-secondary btn_valPlaylist_admin_getPlaylist" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title=valPlaylist.name btn_admin_getPlaylist=valPlaylist.admin_getPlaylist) #{valPlaylist.name}
                     else 
                         p У Вас нет доступных плэйлистов
     br
@@ -23,5 +23,3 @@ block admin_myPlaylists
         div(class="col")
             button(type="submit" class="btn btn-success btn_createNewPlaylist") Создать 
     script(src="/javascripts/mainMyPlayList.js") 
-//- Добавить возможност ьвыбирать сразу композиции в листе чекбоксов, возможно последние просмотренные
-//- если да, доработать БД или работу роутов, для записи в куки временных файлов, ссылок на них
