--- a/views/main.pug
+++ b/views/main.pug
@@ -40,6 +40,7 @@ html
           block main_myProfile
           block main_myPlaylistDetail
           block main_myMusic
+          block MyMusicDetail
           block main_listJanrs
           block main_InfoJanr
           block main_pageUsers
