--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -53,6 +53,7 @@ html
           block admin_listMus
           block adminPage_detailMusic
           block adminPage_myCompositions
+          block adminPage_MyMusicDetail
           block admin_myProfile
           block admin_myPlaylists
           block admin_myPlaylistDetail
