fix #8 #7 for global search

--- a/views/pageRolesInfo.pug
+++ b/views/pageRolesInfo.pug
@@ -32,5 +32,5 @@ block pageRolesInfo
                             button(type="submit" class="btn btn-warning btnForDelete" id=dataRoles.dataRolesById._id) Удалить роль из системы
                         div(class="back")
                             button(type="submit" class="btn btn-secondary btn_back_to_roles") Назад
-    script(src="/javascripts/pageRoles.js") 
+    script(src="/javascripts/pageRolesInfo.js") 
                         
