--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -34,15 +34,15 @@ html
                   a(class="dropdown-item" href="/v1/api/adminCatalog/roles") Роли пользователей 
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/rights") Доступные системные права  
-          form(class="d-flex" role="search" action="")
-            input(class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск") 
-            button(class="btn btn-outline-success" type="submit") Найти
+          div(class="d-flex")
+            input(class="form-control me-2 searchData" type="text" placeholder="Поиск" aria-label="Поиск") 
+            button(class="btn btn-outline-success btn_global_search" type="submit") Найти
     br
     div(class="container text-center")
       div(class="row align-items-start")
-        div(class="col-2 col-sm-1")
+        div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Данные 
-        div(class="col-8 col-sm-10")
+        div(class="col-xl-8 col-lg-8 col-md-10 col-sm-12")
           block pageRights 
           block pageRoles  
           block pageRolesInfo
@@ -60,7 +60,8 @@ html
           block admin_listPlaylists
           block adminPage_detailPlaylist_byUser
           block adminPage_detailPlaylist
-        div(class="col-2 col-sm-1")
+          block adminPage_searchList
+        div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Данные 2
     //- script(src="/scripts/script.js") 
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
