--- a/views/main.pug
+++ b/views/main.pug
@@ -25,15 +25,15 @@ html
               a(class="nav-link" aria-current="page" href="/v1/api/main/janrs") Жанры 
             li(class="nav-item")
               a(class="nav-link" aria-current="page" href="/v1/api/main/music") Композиции 
-          form(class="d-flex" role="search" action="")
-            input(class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск") 
-            button(class="btn btn-outline-success" type="submit") Найти
+          div(class="d-flex")
+            input(class="form-control me-2 searchData" type="text" name="searchData" placeholder="Поиск" aria-label="Поиск") 
+            button(class="btn btn-outline-success btn_global_search" type="submit") Найти
     br
     div(class="container text-center")
       div(class="row align-items-start")
-        div(class="col-2 col-sm-1")
+        div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Данные 
-        div(class="col-8 col-sm-10")
+        div(class="col-xl-8 col-lg-8 col-md-10 col-sm-12")
           block listMusic 
           block detailMusic 
           block main_myPlaylists
@@ -46,7 +46,8 @@ html
           block main_pageUsers
           block main_pageUserInfo
           block main_infoUsersPlaylistById
-        div(class="col-2 col-sm-1")
+          block main_searchList
+        div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Data 2
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
