--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -35,7 +35,7 @@ html
                 li
                   a(class="dropdown-item" href="/v1/api/adminCatalog/rights") Доступные системные права  
           div(class="d-flex")
-            input(class="form-control me-2 searchData" type="text" placeholder="Поиск" aria-label="Поиск") 
+            input(class="form-control me-2 searchData" type="text" name="searchData" placeholder="Поиск" aria-label="Поиск") 
             button(class="btn btn-outline-success btn_global_search" type="submit") Найти
     br
     div(class="container text-center")
@@ -43,6 +43,18 @@ html
         div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Данные 
         div(class="col-xl-8 col-lg-8 col-md-10 col-sm-12")
+          div(class="row")
+            div(class="col")
+              div(class="search_section vstack gap-3 list-group list-group-flush hidden")
+                div(class="music_search_title")
+                | Композиции:
+                div(Class="list-group-item music_search")
+                div(class="janrs_search_title")
+                | Жанры: 
+                div(class="list-group-item janrs_search")
+                div(class="users_search_title")
+                | Пользователи: 
+                div(class="list-group-item users_search")
           block pageRights 
           block pageRoles  
           block pageRolesInfo
@@ -63,7 +75,6 @@ html
           block adminPage_searchList
         div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Данные 2
-    //- script(src="/scripts/script.js") 
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
     script(src="/javascripts/adminPage.js") 
