--- a/views/main.pug
+++ b/views/main.pug
@@ -34,6 +34,18 @@ html
         div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
           p Данные 
         div(class="col-xl-8 col-lg-8 col-md-10 col-sm-12")
+          div(class="row")
+            div(class="col")
+              div(class="search_section vstack gap-3 list-group list-group-flush hidden")
+                div(class="music_search_title")
+                | Композиции:
+                div(Class="list-group-item music_search")
+                div(class="janrs_search_title")
+                | Жанры: 
+                div(class="list-group-item janrs_search")
+                div(class="users_search_title")
+                | Пользователи: 
+                div(class="list-group-item users_search")
           block listMusic 
           block detailMusic 
           block main_myPlaylists
@@ -48,7 +60,6 @@ html
           block main_infoUsersPlaylistById
           block main_searchList
         div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
-          p Data 2
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
     script(src="/javascripts/addmusicScript.js") 
